style.css
@import url(https://fonts.googleapis.com/css?family=Francois+One);

body {
  margin: 0;
  padding: 0;
  height: 100%;
}
ul {
  padding-left: 0;
}

.social-row .fas,
.social-row .fab,
.social-row .far {
  padding-left: 10px;
  padding-right: 10px;
  color: #5bc0de;
}
.social-row .fas:hover,
.social-row .fab:hover,
.social-row .far:hover {
  color: #34495e;
}
.social-row {
  padding-top: 60px;
}

body {
  text-align: center;
  font-family: "Francois One", sans-serif;
  overflow-x: hidden;

  background-image: -webkit-linear-gradient(left, #FFD7FB, #BCF9E6);
  background-image: -moz-linear-gradient(left, #FFD7FB, #BCF9E6);
  background-image: -o-linear-gradient(left, #FFD7FB, #BCF9E6);
  background-image: linear-gradient(left, #FFD7FB, #BCF9E6);
}

.list-wrapper {
  padding-left: 0;
  margin-top: 0;
}

.pullquote,
.pullquote:before,
.pullquote:after {
  background-image: -webkit-linear-gradient(left, #FF05E9, #00FFB2);
  background-image: -o-linear-gradient(left, #FF05E9, #00FFB2);
  /* Note that there's no -moz because backgrould-clip: text;
     is not supported in Firefox, so we skip the gradient */
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-text-fill-color: #fff;
  -o-text-fill-color: #fff;
  color: transparent;
}

.pullquote {
  color: #FA1E64;
  margin: auto;
  color: #FF05E9;
  position: relative;
}

.pullquote-large, h1 {
  -webkit-text-stroke: 0.3rem transparent;
  -o-text-stroke: 0.3rem transparent;
  font-size: 10rem;
  letter-spacing: -0.25rem;
  line-height: 11.25rem;
}

@media only screen and (max-width: 767px) {
  .pullquote-large, h1 {
    font-size: 6rem;
  }
}

.pullquote-small {
  -webkit-text-stroke: 0.25rem transparent;
  -o-text-stroke: 0.25rem transparent;
  font-size: 2.5rem;
  letter-spacing: -0.125rem;
  line-height: 3rem;
}

@media only screen and (max-width: 767px) {
  .pullquote-small {
    margin-top: 25px;
  }
}

.pullquote-rotate {
  -moz-transform: rotate(-7.5deg);
  -ms-transform: rotate(-7.5deg);
  -webkit-transform: rotate(-7.5deg);
  transform: rotate(-7.5deg);
}

.pullquote:before,
.pullquote:after {
    content: attr(data-feature-quote);
    position: absolute;
    width: 100%;
}

.pullquote:before {
    left: 0.25rem;
    top: -0.25rem;
}

.pullquote:after {
    left: 0.5rem;
    top: -0.5rem;
}

.founder-text {
  font-style: normal;
  text-transform: uppercase;
  color: #fff;
  text-shadow: -1px 1px 2px rgba(0,0,0,0.5);
  letter-spacing: 0.125em;
  margin-top: 35px;
}

p, h1 {
  margin: 0.5em 0;
}

@media only screen and (max-width: 767px) {
  .founder-text {
    font-size: 1.3rem;
  }
}

a {
  color: #5565BE;
  text-decoration: none;
}

